--- a/src/style.css
+++ b/src/style.css
@@ -302,16 +302,16 @@ a:focus {
   border-radius: 100%;
 }
 
-.blog-post header h1 {
+.article-page header h1 {
   margin: var(--spacing-0) var(--spacing-0) var(--spacing-4) var(--spacing-0);
 }
 
-.blog-post header p {
+.article-page header p {
   font-size: var(--fontSize-2);
   font-family: var(--font-heading);
 }
 
-.blog-post-nav ul {
+.article-page-nav ul {
   margin: var(--spacing-0);
 }
 
