--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,33 +1,31 @@
 .app {
-  height: 100%;
+  height: 100vh;
   overflow: hidden;
-  // overflow-y: auto;
   position: relative;
   background: linear-gradient(247.2deg, #e32f3e 0.57%, #eb6b3c 99.25%);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-}
 
-.hero {
-  background: transparent;
-  right: 50%;
-  top: 35%;
-  transform: translate(50%, -40%);
-  width: 100%;
-}
-
-.section {
-  &-placeholder {
-    background-color: transparent;
-    min-height: 100vh;
-  }
-
-  &-fixed {
-    background-color: transparent;
-    position: fixed;
-    z-index: 0;
+  &::before {
+    content: "";
+    display: block; /*missing prop*/
+    background: url("../images/mobile-container.png") right top no-repeat;
+    position: absolute;
+    bottom: 0;
+    width: 100vw;
+    height: 767px;
+    z-index: 1;
   }
 }
 
 @import "./bg";
 @import "./clock";
+
+@media screen and (min-width: 601px) {
+  .app {
+    &::before {
+      height: 600px;
+      background: url("../images/container.png") center top no-repeat;
+    }
+  }
+}
