--- a/src/components/Block/_block.scss
+++ b/src/components/Block/_block.scss
@@ -1,9 +1,10 @@
 .block {
   &__title {
     font-weight: 600;
-    font-size: 32px;
+    font-size: 22px;
     line-height: 32px;
     color: $primaryColor;
+    margin-top: 10px;
   }
 
   &__meta {
@@ -17,11 +18,18 @@
     margin: 10px 0 15px;
   }
 
+  &__image {
+    img {
+      width: 100%;
+    }
+  }
+
   &__button {
     background-color: $primaryColor;
     display: inline-block;
     padding: 5px 10px;
     border: 2px solid $primaryColor;
+    margin-top: 12px;
 
     a {
       color: $secondaryColor !important;
@@ -29,6 +37,15 @@
 
     &:hover {
       border: $secondaryColor 2px solid;
+    }
+  }
+}
+
+@media screen and (min-width: 601px) {
+  .block {
+    &__title {
+      font-size: 32px;
+      margin-top: 0;
     }
   }
 }
