--- a/src/style.css
+++ b/src/style.css
@@ -252,7 +252,7 @@ a:focus {
 }
 
 .global-header {
-  /* margin-bottom: var(--spacing-12); */
+  margin-bottom: var(--spacing-12);
 }
 
 .main-heading {
