Updates to trip and stop pages

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,6 +18,8 @@ a {
 @import "../components/Block/block";
 @import "../components/ImageGrid/image-grid";
 @import "./home";
+@import "./trip";
+@import "./stop";
 @import "./gallery";
 @import "./swiper";
 @import "./footer";
