--- a/src/style.css
+++ b/src/style.css
@@ -244,7 +244,7 @@ a:focus {
   position: relative;
   margin: var(--spacing-0) auto;
   max-width: var(--maxWidth-wrapper);
-  padding: var(--spacing-10) var(--spacing-5);
+  padding: 0 var(--spacing-5);
 }
 
 .global-wrapper[data-is-root-path="true"] .bio {
