--- a/src/styles/_trip.scss
+++ b/src/styles/_trip.scss
@@ -5,6 +5,23 @@
 
   .card {
     margin: 20px;
+    position: relative;
+    box-shadow: none;
+    border-color: rgba(#a68a64, 0.2);
+
+    & + .card {
+      margin-top: 60px;
+
+      &::before {
+        content: "";
+        position: absolute;
+        top: -40px;
+        height: 50px;
+        border: 2px solid rgba($secondaryColor, 0.2);
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    }
 
     &__button {
       a {
@@ -16,7 +33,31 @@
 
     &--active {
       margin: 0;
-      border: black 1px solid;
+      border: #a68a64 3px solid;
+      box-shadow: $boxShadow;
+    }
+  }
+}
+
+@media screen and (min-width: 601px) {
+  .trip-page {
+    .card {
+      margin: 20px;
+      position: relative;
+
+      & + .card {
+        margin-top: 120px;
+
+        &::before {
+          content: "";
+          position: absolute;
+          top: -70px;
+          height: 85px;
+          border: 2px solid rgba($secondaryColor, 0.2);
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+      }
     }
   }
 }
