--- a/src/styles/_stop.scss
+++ b/src/styles/_stop.scss
@@ -1,3 +1,26 @@
 .entry {
+  margin: 20px 20px 40px;
+
+  .card-title {
+    margin-bottom: 12px;
+  }
+
+  .card-subtitle {
+    margin-bottom: 12px;
+    font-size: 12px;
+    font-style: italic;
+  }
+}
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.gallery {
+  padding-top: 20px;
+}
+
+.column {
   margin-bottom: 20px;
 }
