--- a/src/styles/_stop.scss
+++ b/src/styles/_stop.scss
@@ -12,6 +12,16 @@
   }
 }
 
+.hike-details {
+  li {
+    margin-bottom: 5px;
+  }
+
+  span {
+    font-weight: bold;
+  }
+}
+
 img {
   width: 100%;
   height: 100%;
