Hides tabs with no content, and adds image previewer to stop, home, and gallery pages

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -26,6 +26,10 @@ a {
   }
 }
 
+.fade {
+  opacity: 1 !important;
+}
+
 @import "../components/Hero/hero";
 @import "../components/NavBar/nav";
 @import "../components/Countdown/clock";
